objects/FCO_Schedule__c.object
<CustomObject>
    <label>FCO Schedule</label>
    <nameField>
        <displayFormat>FSCH-{0000}</displayFormat>
        <label>FCO Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCO Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>FCO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCO</label>
        <referenceTo>FCO__c</referenceTo>
        <relationshipLabel>FCO Schedules</relationshipLabel>
        <relationshipName>FCO_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCO_Search__c</fullName>
        <label>FCO Search</label>
        <referenceTo>FCO_Search__c</referenceTo>
        <relationshipLabel>FCO Schedules</relationshipLabel>
        <relationshipName>FCO_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scheduled_Time__c</fullName>
        <label>Scheduled Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Processed_time__c</fullName>
        <label>Last Processed time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_processing_time__c</fullName>
        <label>Next processing time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>